# Vapor

./: CMakeLists.txt  README.md
Data/: CMakeLists.txt  sample-material.json  sample-model.json
Data/materials/column/: column.json
Data/materials/floor/: floor.json
Data/materials/gold/: gold.json
Data/materials/leaves/: leaves.json
Data/materials/marble/: marble.json
Data/materials/roof/: roof.json
Data/materials/skybox/: skybox.json
Data/materials/star-animation/: star-animation.json
Data/materials/terrain/: terrain.json
Data/materials/terrain-circle/: terrain-circle.json
Data/materials/tree/: tree.json
Data/materials/uv/: uv.json
Data/materials/valve/: valve.json
Data/materials/water/: water.json
Data/materials/water-flow/: water-flow.json
Data/materials/water-splash/: water-splash.json
Data/materials/water-transparent/: water-transparent.json
Data/meshes/bathhouse/: bathhouse.json  bathhouse.mtl
Data/meshes/bathhouse-floor/: bathhouse-floor.json  model.mtl
Data/meshes/bathhouse-roof/: bathhouse-roof.json  model.mtl
Data/meshes/bathhouse-water-flow/: bathhouse-water-flow.json  flow.mtl
Data/meshes/bathhouse-water-level/: bathhouse-water-level.json  water.mtl
Data/meshes/bathhouse-water-splash/: bathhouse-water-splash.json
Data/meshes/column/: column.json  model.mtl
Data/meshes/cylinder/: model.mtl
Data/meshes/ico-sphere/: ico-sphere.json  model.mtl
Data/meshes/leaves/: leaves.json  leaves.mtl
Data/meshes/plane/: plane.json  plane.mtl
Data/meshes/stairs/: model.mtl  stairs.json
Data/meshes/star/: model.mtl
Data/meshes/statue/: model.mtl  statue.json
Data/meshes/terrain/: terrain.json  terrain.mtl
Data/meshes/terrain-circle/: model.mtl  terrain-circle.json
Data/meshes/tree/: tree.json
Data/meshes/valve/: model.mtl
Data/shaders/simple/: simple-frag.glsl  simple-vert.glsl  simple.json
Data/shaders/skybox/: skybox-frag.glsl  skybox-vert.glsl  skybox.json
Data/simple-material/: simple-frag.glsl  simple-material.json  simple-vert.glsl
Data/simple-mesh/: simple-mesh.json
Data/statue-mesh/: statue-02.mtl
Game/: CMakeLists.txt  main.cpp
Vapor/: CMakeLists.txt
Vapor/include/: Types.h  Util.h  Vapor.h  hello.h
Vapor/include/action/: EntityHovering.h  GLUTCaptureMouseSwitchAction.h  IAction.h  RotatingLight.h  SelectableItems.h  UserCameraAction.h  UserKeyAction.h
Vapor/include/assets/: Asset.h  AssetHandler.h  MaterialAsset.h  MeshAsset.h  ShaderAsset.h  TextureAsset.h
Vapor/include/engine/: Engine.h  State.h
Vapor/include/gl/: GLBuffer.h  LightsUBO.h  VecHash.h
Vapor/include/input/: GLUTCallbackRegistry.h  GLUTInputsHandler.h  GLUTKeyMapping.h  GLUTUserInput.h  UserInput.h
Vapor/include/models/: Pedestal.h  UnitCube.h
Vapor/include/renderer/: SceneRenderer.h  SceneRenderingInstance.h
Vapor/include/scene/: LightEntity.h  ModelEntity.h  Scene.h  SceneCamera.h  SceneEntity.h  SceneNode.h  SceneObject.h
Vapor/include/utils/: ModelLoader.h  Singleton.h
Vapor/include/window/: GLUTWindow.h  Window.h
Vapor/src/: Types.cpp  Util.cpp  hello.cpp
Vapor/src/action/: EntityHovering.cpp  GLUTCaptureMouseSwitchAction.cpp  RotatingLight.cpp  SelectableItems.cpp  UserCameraAction.cpp  UserKeyAction.cpp
Vapor/src/assets/: Asset.cpp  AssetHandler.cpp  MaterialAsset.cpp  MeshAsset.cpp  ShaderAsset.cpp  TextureAsset.cpp
Vapor/src/engine/: Engine.cpp  State.cpp
Vapor/src/gl/: LightsUBO.cpp
Vapor/src/input/: GLUTCallbackRegistry.cpp  GLUTKeyMapping.cpp  GLUTUserInput.cpp  UserInput.cpp
Vapor/src/models/: Pedestal.cpp  UnitCube.cpp
Vapor/src/renderer/: SceneRenderer.cpp  SceneRenderingInstance.cpp
Vapor/src/scene/: LightEntity.cpp  ModelEntity.cpp  Scene.cpp  SceneCamera.cpp  SceneEntity.cpp  SceneNode.cpp  SceneObject.cpp
Vapor/src/window/: GLUTWindow.cpp  Window.cpp
(+19 files in other folders)
